# pfr_scraper

./: .gitignore  README.md  pyproject.toml
src/pfr_scraper/: __init__.py  helper.py  nfl_abbreviations.json
